small fixes for photo spacing

--- a/src/styles/_photos.scss
+++ b/src/styles/_photos.scss
@@ -11,8 +11,12 @@
     width: 100% !important;
     height: auto !important;
     border-radius: 10px;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
   }
+}
+
+.gatsby-image-wrapper {
+  margin-bottom: 10px;
 }
 
 @media (max-width: 800px) {
